2001-04-24  Christoph Spiel <cspiel@hammersmith-consulting.com>

	* Makefile.in (check): Allow user to specify which .exp file to run.
	* octave.test/try, octave.test/eval-catch: New directories and tests.

2000-06-07  Ben Sapp <bsapp@nua.lampf.lanl.gov>

	* octave.test/quad/quad-1.m: Use absolute value of difference
	from expected value when comparing with sqrt (eps).  Potential
	problems like this were noticed by Przemek Klosowski
	<przemek@rrdjazz.nist.gov>.
	* octave.test/quad/quad-2.m: Likewise.
	* octave.test/arith/exp-1.m: Likewise.
	* octave.test/linalg/cond-1.m: Likewise.
	* octave.test/linalg/eig-1.m: Likewise.
	* octave.test/linalg/eig-2.m: Likewise.
	* octave.test/linalg/inv-1.m: Likewise.
	* octave.test/linalg/lu-2.m: Likewise.
	* octave.test/linalg/svd-2.m: Likewise.
	* octave.test/linalg/svd-10.m: Likewise.

1999-10-29  John W. Eaton  <jwe@bevo.che.wisc.edu>

	* octave.test/system/mktime-1.m (t): Compare whole seconds only.

Fri Dec  4 20:55:47 1998  John W. Eaton  <jwe@bevo.che.wisc.edu>

	* octave.test/system/clock-1.m: Use standard format specifiers %d
	and %H instead of %e and %k.

Fri Oct 23 15:53:01 1998  John W. Eaton  <jwe@bevo.che.wisc.edu>

	* octave.test/arith/exp-5.m: New test.

	* octave.test/stats/mean-3.m: New version of mean accepts a second
	optional arg.

	* octave.test/system/date-1.m: Correct test for new Y2K-compliant
	date function.

Wed May 27 00:38:27 1998  John W. Eaton  <jwe@bevo.che.wisc.edu>

	* octave.test/diffeq/dassl-1.m, octave.test/diffeq/dassl-2.m,
	octave.test/diffeq/lsode-1.m: New tests, from David Billinghurst
	<David.Billinghurst@riotinto.com.au>.

	* octave.test/diffeq/lsode-2.m, octave.test/diffeq/lsode-3.m:
 	New tests, from Peter Hopfgartner <phopfgartner@memc.inet.it>.

Thu Apr 23 01:45:16 1998  John W. Eaton  <jwe@bevo.che.wisc.edu>

	* Makefile.in: If $(SHARED_LIBS), set LD_LIBRARY_PATH for running
	Octave before installation is complete.

Wed Apr 15 15:23:43 1998  John W. Eaton  <jwe@bevo.che.wisc.edu>
